<resources>
    <string name="app_name">Pi Trainer</string>
    <string name="vibrate">Vibrate</string>
    <string name="on_screen_keyboard">In-app keyboard</string>
    <string name="pi">Pi</string>
    <string name="tau">Tau</string>
    <string name="euler_number">Euler\'s number</string>
    <string name="sqrt2">Square root of 2</string>
    <string name="restart">Restart</string>
    <string name="digits_colon">Digits:</string>
    <string name="errors_colon">Errors:</string>
    <string name="percentage_colon">Percentage:</string>
    <string name="number">Number…</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>
    <string name="practise">Practise</string>
    <string name="reference">Reference</string>
    <string name="number_option_dialog_title">Select the number to practise</string>
    <string name="settings">Settings</string>
    <string name="text_size_colon">Text size: %d</string>
    <string name="spaces">Spaces</string>
    <string name="number_of_digits_given_colon">Number of digits given: %d</string>
    <string name="range">Range</string>
    <string name="next">Next</string>
    <string name="complete_the_statement">Complete</string>
    <string name="title_activity_add_number">Add Number</string>
    <string name="integer_part">Integer part</string>
    <string name="integer_part_explanation">The digits in front of the floating point</string>
    <string name="fractional_part">Fractional part</string>
    <string name="fractional_part_explanation">The digits after the floating point</string>
    <string name="name">Name</string>
    <string name="add_number">Add number…</string>
    <string name="dismiss">Dismiss</string>
    <string name="save">Save</string>
    <string name="too_much_input_dialog_message">Great work! You have reached the maximum amount of digits of the number.</string>
    <string name="check_your_settings">Something is wrong in your settings</string>
    <string name="length_of_answer_colon">Length of answer: %d</string>
    <string name="title_activity_numbers">Custom numbers</string>
    <string name="custom_numbers">Custom numbers…</string>
    <string name="create">Create</string>
    <string name="no_custom_numbers">You have not added any numbers yet.</string>
    <string name="delete">Delete</string>
    <string name="sure_delete_digits">Are you sure you want to delete this number?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="golden_ratio">Golden Ratio</string>
    <string name="timed_mode_game">Timed mode</string>
    <string name="digits_colon_format">Digits: %d</string>
    <string name="sort_by_spinner_text">Sort by:</string>
    <string name="record_card_description" formatted="false">%d digits at %.2f digits per minute"</string>
    <string name="try_again">Try again</string>
    <string name="record_holder_name">Name</string>
    <string name="do_not_save_record">Don\'t save</string>
    <string name="high_scores">High scores</string>
    <string name="done">Done</string>
    <string name="please_type_more_digits_snackbar">Please type more digits</string>
    <string name="please_provide_a_name">Please provide a name</string>
    <string name="please_provide_an_integer_part">Please provide an integer part</string>
    <string name="please_provide_a_fractional_part">Please provide a fractional part</string>
    <string name="there_is_already_a_number_with_that_name">There is already a number with that name</string>
    <string name="save_error_message">Something went wrong while saving</string>
    <string name="record_dialog_message_format" formatted="false">You typed %d digits in %.1f seconds.</string>
    <string name="choose_keyboard_layout">Choose keyboard layout</string>
    <string name="keyboard_layout_ellipsis">Keyboard layout…</string>
    <string name="gregory_leibniz_series">Gregory-Leibniz series</string>
    <string name="click_start">Click start</string>
    <string name="n_textView_format">…+1/%d…</string>
    <string name="learn_more">Learn more</string>
    <string name="ok">OK</string>
    <string name="theme_ellipsis">Theme…</string>
    <string name="theme">Theme</string>
    <string name="night_mode_not_available_message">Sorry, this feature is not available on your Android version.</string>
    <string name="keyboard_size">Keyboard size</string>
    <string name="keyboard_size_ellipsis">Keyboard size…</string>
    <string name="keyboard_width_format" formatted="false">Keyboard width: %s</string>
    <string name="keyboard_height_format" formatted="false">Keyboard height: %s</string>
    <string name="keyboard_size_save">Save</string>
    <string name="keyboard_size_discard">Discard</string>
    <string name="keyboard_size_save_or_discard">Save or discard?</string>
    <string name="keyboard_size_smallest">Smallest</string>
    <string name="keyboard_size_largest">Largest</string>
    <string name="xs_backspace">backspace</string>
    <string name="warning">Warning</string>
    <string name="keyboard_width_warning_message">Setting the width to Largest won\'t work with landscape</string>
    <string name="keyboard_feedback">Keyboard feedback</string>
    <string name="close_settings_xs">Close settings</string>
    <string name="range_start">Range start</string>
    <string name="range_stop">Range stop</string>
    <string name="error_message_invalid_integer">Invalid integer</string>
    <string name="error_message_too_large">Too large</string>
    <string name="error_message_too_small">Too small</string>
    <string name="range_start_colon">Range start: %d</string>
    <string name="range_stop_colon">Range stop: %d</string>
    <string name="an_error_occurred">An error occurred! Please check your range settings.</string>
    <string name="starting_digit">Starting digit</string>
    <string name="complete_mode_not_possible">Complete mode can\'t be used with this number because it has too few digits. Please select another number.</string>
    <string name="invalid">Invalid</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="line_count">Line count</string>
    <string name="scroll_to">Scroll to…</string>
    <string name="invalid_input">Invalid input</string>
    <string name="go">Go</string>
    <string name="record_digits_format">%d digits</string>
    <string name="record_time_format">%.2f seconds</string>
    <string name="record_dpm_format">%.2f per minute</string>

    <string-array name="sort_methods">
        <item>Digits per minute</item>
        <item>Number of digits</item>
        <item>Date</item>
    </string-array>

    <string-array name="themes">
        <item>Auto</item>
        <item>Day theme</item>
        <item>Night theme</item>
    </string-array>
</resources>