<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/number"
        android:title="@string/number"
        app:showAsAction="never" />

    <item
        android:id="@+id/vibrate"
        android:checkable="true"
        android:checked="true"
        android:title="@string/vibrate"
        app:showAsAction="never" />

    <item
        android:id="@+id/keyboard"
        android:checkable="true"
        android:checked="false"
        android:title="@string/on_screen_keyboard"
        app:showAsAction="never" />

    <item
        android:id="@+id/keyboard_feedback"
        android:checkable="true"
        android:checked="true"
        android:title="@string/keyboard_feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/choose_keyboard_layout"
        android:title="@string/keyboard_layout_ellipsis"
        app:showAsAction="never" />

    <item
        android:id="@+id/keyboard_size"
        android:title="@string/keyboard_size_ellipsis"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_action_theme"
        android:title="@string/theme_ellipsis"
        app:showAsAction="never" />

    <item
        android:id="@+id/privacy_policy"
        android:title="@string/privacy_policy"
        app:showAsAction="never" />
</menu>
