<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <com.teinproductions.tein.pitrainer.keyboard.Keyboard
        android:id="@+id/keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        tools:visibility="visible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/keyboard"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/integerPart_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorPrimary"
                android:textSize="48sp"
                tools:text="3." />

            <EditText
                android:id="@+id/input_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/integerPart_textView"
                android:maxLines="8"
                android:numeric="integer"
                android:textSize="24sp" />

            <ImageButton
                android:padding="8dp"
                android:id="@+id/refresh_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/input_editText"
                android:background="@null"
                android:contentDescription="@string/restart"
                tools:src="@drawable/ic_restart" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_editText"
                android:layout_marginTop="8dp">

                <TableRow>

                    <TextView
                        android:text="@string/digits_colon"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/digits_textView"
                        android:textSize="22sp" />
                </TableRow>

                <TableRow android:layout_marginTop="4dp">

                    <TextView
                        android:text="@string/errors_colon"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/errors_textView"
                        android:textSize="22sp" />
                </TableRow>

                <TableRow android:layout_marginTop="4dp">

                    <TextView
                        android:text="@string/percentage_colon"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/percentage_textView"
                        android:textSize="22sp" />
                </TableRow>
            </TableLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
