<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.teinproductions.tein.pitrainer.keyboard.Keyboard
            android:id="@+id/keyboard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_margin="16dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_shade"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/keyboard_width_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keyboard_width_format" />

            <SeekBar
                android:id="@+id/keyboardWidthSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/keyboard_width_textView"
                android:padding="8dp" />

            <Button
                android:id="@+id/keyboard_width_button_smallest"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/keyboardWidthSeekBar"
                android:text="@string/keyboard_size_smallest"
                android:textColor="@color/primary_text" />

            <Button
                android:id="@+id/keyboard_width_button_largest"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/keyboardWidthSeekBar"
                android:layout_toEndOf="@id/keyboard_width_button_smallest"
                android:layout_toRightOf="@id/keyboard_width_button_smallest"
                android:text="@string/keyboard_size_largest"
                android:textColor="@color/primary_text" />

            <TextView
                android:id="@+id/keyboard_height_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/keyboard_width_button_smallest"
                android:text="@string/keyboard_height_format" />

            <SeekBar
                android:id="@+id/keyboardHeightSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/keyboard_height_textView"
                android:padding="8dp" />

            <Button
                android:id="@+id/keyboard_height_button_smallest"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/keyboardHeightSeekBar"
                android:text="@string/keyboard_size_smallest"
                android:textColor="@color/primary_text" />

            <Button
                android:id="@+id/keyboard_height_button_largest"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/keyboardHeightSeekBar"
                android:layout_toEndOf="@id/keyboard_height_button_smallest"
                android:layout_toRightOf="@id/keyboard_height_button_smallest"
                android:text="@string/keyboard_size_largest"
                android:textColor="@color/primary_text" />
        </RelativeLayout>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>